--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,464 @@
-/* No CSS */
+html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article, aside, footer, header, nav, section {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: .67em 0;
+}
+
+figcaption, figure, main {
+  display: block;
+}
+
+figure {
+  margin: 1em 40px;
+}
+
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace,monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+b, strong {
+  font-weight: inherit;
+}
+
+b, strong {
+  font-weight: bolder;
+}
+
+code, kbd, samp {
+  font-family: monospace,monospace;
+  font-size: 1em;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -.25em;
+}
+
+sup {
+  top: -.5em;
+}
+
+audio, video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button, input {
+  overflow: visible;
+}
+
+button, select {
+  text-transform: none;
+}
+
+button, html [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: .35em .75em .625em;
+}
+
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox], [type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details, menu {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+canvas {
+  display: inline-block;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: '';
+  clear: both;
+  height: 0;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.srOnly {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  color: white;
+}
+
+h1, h2, h3, h4, h5, h6, button, nav {
+  font-family: "Josefin Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: "Barlow", sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 2.8rem;
+  letter-spacing: 1px;
+}
+
+.wrapper {
+  max-width: 1400px;
+  width: 98%;
+  margin: 0 auto;
+}
+
+/* global header styles */
+header {
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 80vh;
+  width: 100%;
+}
+
+.imgBoxShadowRight {
+  -webkit-box-shadow: 20px 20px #FFD300;
+          box-shadow: 20px 20px #FFD300;
+}
+
+.imgBoxShadowLeft {
+  -webkit-box-shadow: -20px 20px #FFD300;
+          box-shadow: -20px 20px #FFD300;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav li {
+  list-style: none;
+  padding: 75px 0;
+  text-align: center;
+}
+
+nav a {
+  font-size: 2rem;
+  line-height: 2.9rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding: 10px 20px;
+}
+
+nav a:hover {
+  color: #FFD300;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.navCurrentPage {
+  -webkit-box-shadow: 0 21px 0 -18px #FFD300;
+          box-shadow: 0 21px 0 -18px #FFD300;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+/* Page Imports */
+/* HEADER STYLES FOR HOME PAGE */
+.headerMain {
+  background-image: url(../assets/home-header.jpg);
+}
+
+.headerMain h1 {
+  text-transform: uppercase;
+  font-size: 6.9rem;
+  font-weight: 600;
+  width: 30%;
+  margin-top: 50px;
+}
+
+.headerMain h1 span {
+  color: #171B0E;
+  background-color: white;
+  padding-top: 5px;
+}
+
+.mainHomeImg {
+  position: absolute;
+  bottom: -15px;
+  right: 0;
+}
+
+/* END OF HEADER STYLES FOR HOME PAGE */
+/* START OF MAIN SECTION STYLES */
+.informationSec {
+  background-color: #2B331B;
+}
+
+.informationSec h2 {
+  text-transform: uppercase;
+  font-size: 4.5rem;
+  font-weight: 400;
+}
+
+.gridContainer {
+  padding: 200px 0 100px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: max-content;
+      grid-template-rows: -webkit-max-content;
+      grid-template-rows: max-content;
+  gap: 20px;
+  overflow: auto;
+}
+
+h2 {
+  width: 100%;
+}
+
+.flexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.informContentContainer {
+  width: 90%;
+}
+
+.informContentContainer p {
+  padding: 35px 0;
+}
+
+.informIconContainer {
+  width: 10%;
+}
+
+.iconCircle {
+  width: 45px;
+  height: 45px;
+  background-color: #FFD300;
+  padding-top: 10px;
+  border-radius: 100%;
+  font-size: 2.5rem;
+  color: #171B0E;
+  text-align: center;
+}
+
+/* blog section styles */
+.blogSection {
+  background-color: #171B0E;
+}
+
+.blogSection h5 {
+  font-weight: 400;
+  font-size: 4rem;
+  line-height: 5.8rem;
+  letter-spacing: 1px;
+}
+
+.blogSection .flexContainer {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.flexContainer li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+}
+
+.blogContentOne {
+  text-align: left;
+}
+
+.blogContentTwo {
+  text-align: right;
+}
+
+.headerBlog {
+  background-image: url(../assets/blog-header.jpg);
+}
+
+.headerContact {
+  background-image: url(../assets/contact-header.jpg);
+}
+
+@media (max-width: 800px) {
+  .gridContainer {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+}
