--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -2,4 +2,7 @@ footer {
     background-color: black;
     color: $colorWhite;
     text-align: center;
+    p {
+        padding: 20px 0;
+    }
 }
