--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -33,3 +33,11 @@ h5 {
     letter-spacing: 1px;
     padding-top: 70px;
 }
+
+h6 {
+    color: $colorYellow;
+    font-size: 2.5rem;
+    line-height: 5.8rem;
+    letter-spacing: 0.8px;
+    font-weight: normal;
+}
