--- a/styles/style.css
+++ b/styles/style.css
@@ -264,6 +264,14 @@ h5 {
   padding-top: 70px;
 }
 
+h6 {
+  color: #FFD300;
+  font-size: 2.5rem;
+  line-height: 5.8rem;
+  letter-spacing: 0.8px;
+  font-weight: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -290,7 +298,7 @@ h1, h2, h3, h4, h5, h6, button, nav, .button {
   text-transform: uppercase;
 }
 
-p {
+p, form, .blogSideBarList li {
   font-family: "Barlow", sans-serif;
   font-weight: 400;
   font-size: 2rem;
@@ -598,6 +606,139 @@ footer p {
 
 .headerBlog {
   background-image: url(../assets/blog-header.jpg);
+}
+
+.headerBlog nav ul li:first-child {
+  padding-left: 0;
+}
+
+.blogGridContainer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -webkit-column-gap: 100px;
+          column-gap: 100px;
+  background-color: #2B331B;
+}
+
+.blogSideBarContent {
+  margin: 50px 0 0 100px;
+  background-color: #171B0E;
+  padding: 0 25px;
+  width: 50%;
+}
+
+.blogSideBarImg {
+  position: relative;
+  bottom: 50px;
+  right: 50px;
+}
+
+.blogSideBarList {
+  padding-bottom: 30px;
+}
+
+.blogSideBarList li {
+  list-style-type: disc;
+  list-style-position: inside;
+  padding: 0;
+}
+
+.blogContent {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2 / span 4;
+}
+
+.blogContent h2 {
+  color: #FFD300;
+}
+
+.blogContentText2 {
+  padding-right: 60px;
+  position: relative;
+}
+
+.blogContentImg {
+  text-align: right;
+}
+
+.blogContentImg img {
+  text-align: right;
+  width: 100%;
+  position: relative;
+  bottom: 200px;
+  right: 45px;
+}
+
+.blogContentText {
+  padding: 60px 0 80px 60px;
+  border-left: 5px solid #FFD300;
+  border-bottom: 5px solid #FFD300;
+}
+
+.blogComments {
+  padding: 0 80px;
+}
+
+.blogComments .blogCommentImg {
+  width: 20%;
+}
+
+.blogComments .blogCommentImg img {
+  padding: 40px 40px 40px 0;
+}
+
+.blogComments .blogCommentContent {
+  width: 80%;
+}
+
+.blogComments p:nth-of-type(1) {
+  color: #FFD300;
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: 50px 200px;
+      grid-template-rows: 50px 200px;
+  gap: 20px;
+  padding: 0 80px;
+}
+
+form input {
+  background-color: #2B331B;
+  color: white;
+}
+
+#name, #email {
+  border: none;
+  border-bottom: 2px solid #FFD300;
+  padding-left: 25px;
+}
+
+#message {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  border: 2px solid #FFD300;
+  padding: 0 0 150px 25px;
+}
+
+.formGridItem4 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/ span 2;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  margin-bottom: 50px;
 }
 
 .headerContact {
